# asi-scan

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape
docs/design/: 2026-07-09-asi-scan-v0.1-design.md
docs/plans/: 2026-07-09-asi-scan-v0.1.md
src/asi_scan/: __init__.py  cli.py  detectors.py  engine.py  models.py  report.py  selftest.py  target.py
src/asi_scan/probes/: __init__.py  asi02_tool_misuse.py  asi05_code_exec.py  asi06_memory_poisoning.py  asi07_shadowing.py  base.py
tests/: conftest.py  test_cli.py  test_detectors.py  test_engine.py  test_models.py  test_probe_asi02.py  test_probe_asi05.py  test_probe_asi06.py  test_probe_asi07.py  test_registry.py  test_report.py  test_selftest_server.py  test_smoke.py  test_target_contract.py
