[project]
name = "asi-scan"
version = "0.1.0"
description = "Runtime security scanner for agentic AI systems, mapped to OWASP ASI01-ASI10"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["mcp>=1.9,<2", "typer>=0.12"]

[project.scripts]
asi-scan = "asi_scan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asi_scan"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
